--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,8 @@
 @import "font-awesome";
 @import "./reset";
 @import "./menu";
-@import "./header";
+@import "./flash";
 @import "./main";
 @import "./message_form";
 @import "./body";
+@import "user";
