--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -8,7 +8,7 @@
   %p.member_name
    Member: test-name
   .edit
-   =link_to "" do
+   =link_to edit_group_path(1)  do
     Edit
  .main_middle
   %ul.chat_lists
