--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -17,7 +17,7 @@
      %p
       = message.user.name
       %span 
-       = message.created_at
+       = message.created_at.strftime("%Y-%m-%d %H:%M:%S")
      %p 
       = message.body
      %p 
@@ -26,7 +26,7 @@
 .message_form
  = form_for [@group, @message] do |f|
   = f.text_field :body, placeholder: "type a message"
-  = f.submit value: "Send"
+  = f.submit value: "Send", class: "send"
   = f.label "upload-icon", class: "upload-label" do
    %i(class="fa fa-image")
    = f.file_field :image, id: "message_upload-icon"
