--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -13,9 +13,9 @@
    =link_to edit_group_path(@group)  do
     Edit
  .main_middle
-  %ul.chat_lists
+  .message_lists
    - @messages.each do |message|
-    %li
+    .message{data: {id: "#{message.id}"}}
      %p
       = message.user.name
       %span 
