--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,7 +3,7 @@
 
 .main
  .main_top
-  %p.group_name
+  %p.group_name{data: {id: "#{@group.id}"}}
    = @group.name
   %p.member_name
    Member:
@@ -16,7 +16,7 @@
   .message_lists
    - @messages.each do |message|
     .message{data: {id: "#{message.id}"}}
-     %p
+     %p.upper-message__user-name
       = message.user.name
       %span 
        = message.created_at.strftime("%Y-%m-%d %H:%M:%S")
